welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:3: error: ';' expected but 'return' found.
		if (die1=die2) {die1=die1+1} return die1+die2
                                             ^